<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.dicodingrecyclerview.ui.news.NewsFragment"
        android:label="@string/bottomnav_title_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_navigation_article"
            app:destination="@+id/navigation_article" />
        <argument
            android:name="specificArticle"
            app:argType="com.example.dicodingrecyclerview.data.entities.Article" />
    </fragment>

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.dicodingrecyclerview.ui.article.ArticleFragment"
        android:label="@string/bottomnav_title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.dicodingrecyclerview.ui.about.AboutFragment"
        android:label="@string/bottomnav_title_about"
        tools:layout="@layout/fragment_about" />
</navigation>