<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.article.ArticleFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivNews"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivNews"
            android:layout_toEndOf="@+id/ivNews"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Title"/>

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/ivNews"
            android:layout_toEndOf="@+id/ivNews"
            android:layout_below="@+id/tvTitle"
            android:textSize="16sp"
            tools:text="Source"/>

        <TextView
            android:id="@+id/tvWrittenBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/ivNews"
            android:textSize="16sp"
            android:text="@string/written_by"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivNews"
            android:layout_toRightOf="@+id/tvWrittenBy"
            android:layout_toEndOf="@+id/tvWrittenBy"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Author" />

        <TextView
            android:id="@+id/tvPublishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/tvWrittenBy"
            android:textSize="16sp"
            android:text="@string/publish_date"/>

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWrittenBy"
            android:layout_toRightOf="@+id/tvPublishDate"
            android:layout_toEndOf="@+id/tvPublishDate"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Published Date"/>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/tvPublishDate"
            android:textSize="16sp"
            tools:text="Content"/>

        <TextView
            android:id="@+id/tvFullSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/tvContent"
            android:textSize="16sp"
            android:text="@string/full_source"/>

        <TextView
            android:id="@+id/tvURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/tvFullSource"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            tools:text="URL" />
    </RelativeLayout>
</ScrollView>